--- a/styles/style.css
+++ b/styles/style.css
@@ -73,14 +73,22 @@ h2 {
 h3{
     /* font-size: 1.5em; */
     font-size: clamp(1rem, 1.2862vw + .6158rem, 1.5rem);
-    font-weight: 300;
+    font-weight: 400;
     opacity: .6;
+}
+.BeigeH3 {
+    color: var(--beige);
+    opacity: 1;
 }
 
 h4 {
     /* font-size: 3em; */
     font-size: clamp(1.5rem, 3.8585vw + .3473rem, 3rem);
     font-weight: 400;
+}
+
+p {
+    font-size: 1.2em;
 }
 
 button {
@@ -238,6 +246,28 @@ a{
     top: 60%;
 }
 
+.transitionLoader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--beige);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    transition: all 1s ease;
+
+    background-image: 
+        linear-gradient(rgba(78, 78, 78, 0.3) 1px, transparent 1px), 
+        linear-gradient(90deg, rgb(78, 78, 78, 0.3) 1px, transparent 1px);
+    background-size: 40px 40px; /* Grootte van de grid */
+    background-position: -1px 0;
+}
+
+
+
 .projects {
     padding: 4em;
     display: flex;
@@ -355,6 +385,71 @@ a{
 }
 
 
+/**************/
+/* PROJECTENPAGINA */
+/**************/
+.projectWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.projectContainer {
+    width: 70%;
+}
+.projectContainer img {
+    width: 100%;
+    border-radius: .5em;
+    object-fit: cover;
+}
+.projectIntro {
+    padding: 10em 0 4em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+.projectIntro img {
+    margin-top: 10em;
+}
+.projectContent {
+    padding-top: 8em;
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+}
+.textContainer {
+    padding: 6em 0 15em 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    width: 80%;
+}
+.imgContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: .5em;
+    grid-row-gap: .5em;
+}
+.imgContainer img:nth-child(1){
+    grid-area: 1 / 1 / 2 / 3;
+}
+.imgContainer img:nth-child(2){
+    grid-area: 2 / 1 / 3 / 2;
+}
+.imgContainer img:nth-child(3){
+    grid-area: 2 / 2 / 3 / 3;
+}
+.projecten {
+    padding-top: 10em;
+}
+#specialH2 {
+    font-family: "Algem", sans-serif;
+    text-transform: uppercase;
+    /* font-size: 4em; */
+    font-size: clamp(1.25rem, 5.1447vw + .463rem, 3rem);
+    text-align: center;
+}
 
 @media screen and (max-width: 1100px) {
     .hero, .projects, .about, footer, header {
@@ -464,14 +559,15 @@ a{
 }
 }
 
-
-
-
 /* 
 TODO: 
 
 - Transition op menu
 - Menutekst groter maken bij hamburgervariant 
 
+- Responsive projecten pagina (let op font-size die nog niet clamp zijn (p, speciale h2))
+- Scroll animations toevoegen, geen scrolltrigger!
+
+- Page animations responsive maken
 
 */
