--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,9 @@ header {
     align-items: center;
     padding: 2em 4em;
     opacity: 0;
-    transform: translateY(-100px);
+    /* transform: translateY(-100px); */
+
+    transition: display .5s ease;
 }
 
 nav {
@@ -115,12 +117,17 @@ nav {
     align-items: center;
     margin-left: auto;
     gap: 4em;
+    transform: translateY(0);
+
+    transition: transform 0.5s ease, opacity 0.5s ease;
 }
 nav ul{
     display: flex;
     gap: 4em;
     font-size: 1.2em;  
     list-style-type: none;
+
+    transition: opacity 0.5s ease;
 }
 nav ul li{
     transition: all .5s ease;
@@ -517,6 +524,7 @@ a{
         flex-direction: column;
         justify-content: space-between;
 
+        /* transition: all .5s ease; */
 
         background-color: var(--black-bg); /* Zwarte achtergrondkleur */
         background-image: 
@@ -567,13 +575,25 @@ a{
         padding: 6em 0 8em 0;
     }
 
+    .projecten {
+        padding-top: 0;
+    }
+    .projecten .projects:first-of-type {
+        padding-bottom: 10em;
+    }
+
 }
-/* @media screen and (max-width: 600px) {
-   .imgContainer  {
-    display: flex;
-    flex-direction: column;
-   }
-} */
+@media screen and (max-width: 600px) {
+  .projectContainer {
+    width: 100%;
+  }
+  .textContainer {
+    width: 100%;
+  }
+  .projectContent h3 {
+    width: 100%;
+  }
+}
 
 @media screen and (min-width: 1100px) {
     .interactiveDot:hover + .interactiveCard,
