--- a/styles/style.css
+++ b/styles/style.css
@@ -203,8 +203,7 @@ a{
 }
 .hero p {
     opacity: .6;
-    min-width: 400px;
-    width: 25%;
+    width: 400px;
     margin-left: auto;
     text-align: right;
 }
